# Duck-Engine

./: CMakeLists.txt  README.md
assets/audio/: Source
assets/shaders/: basic.frag  basic.vert  brdf_lut.frag  debug_depth.frag  display.frag  equirect_to_cubemap.frag  equirect_to_cubemap.vert  geometry.frag  geometry.vert  irradiance_cubemap.frag  light.frag  loading_bg.frag  loading_bg.vert  loading_spinner.frag  physics_debug.frag  physics_debug.vert  prefilter.frag  skybox.frag  skybox.vert  ui.frag  ui.vert
dependencies/: glad.c
dependencies/OpenAL/libs/Win64/: dr_wav.h
dependencies/glad/: glad.h
src/: config.h  main.cpp
src/engine/core/: Engine.cpp  Engine.h  TestGame.cpp  TestGame.h
src/engine/core/managers/: AudioManager.cpp  AudioManager.h  GameStateManager.cpp  GameStateManager.h  InputManager.cpp  InputManager.h  InputUtils.h  ResourceManager.cpp  ResourceManager.h  UIManager.cpp  UIManager.h  UIStateManager.cpp  UIStateManager.h
src/engine/core/model/: ImportedModel.cpp  ImportedModel.h  StaticMesh.cpp  StaticMesh.h
src/engine/debug/: DebugRenderer.cpp  DebugRenderer.h
src/engine/ecs/: Component.cpp  Component.h  ComponentType.h  ECS.h  Entity.cpp  Entity.h  World.cpp  World.h
src/engine/ecs/components/: BoundsComponent.h  BoxCollider.h  DebugDrawable.h  DuckComponent.h  GameRoundComponent.h  GunComponent.h  HealthComponent.h  RaycastSource.h  ScoreValueComponent.h  StaticMeshComponent.h  Transform.h  Velocity.h
src/engine/ecs/system/: BoundsSystem.cpp  BoundsSystem.h  CollisionSystem.cpp  CollisionSystem.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DuckSpawnerManager.cpp  DuckSpawnerManager.h  EntityManager.cpp  EntityManager.h  GunSystem.cpp  GunSystem.h  LifecycleSystem.cpp  LifecycleSystem.h  MovementSystem.cpp  RenderingSystem.cpp  RenderingSystem.h  TransformSystem.cpp  TransformSystem.h
src/engine/game/: DuckEntity.cpp  DuckEntity.h  DuckFactory.cpp  DuckFactory.h  DuckGameState.cpp  DuckGameState.h  EnvironmentEntity.cpp  EnvironmentEntity.h  EnvironmentGenerator.cpp  EnvironmentGenerator.h  EventQueue.h  GameStateManager.cpp  GameStateManager.h  GameUtils.h  GunEntity.cpp  GunEntity.h
src/engine/game/ecs/: EnvironmentEntity.cpp  EnvironmentEntity.h  GunEntity.cpp  GunEntity.h
src/engine/game/ecs/components/: GameRoundComponent.h
src/engine/game/ecs/system/: DuckDeathSystem.cpp  DuckDeathSystem.h  GameStateSystem.cpp  GameStateSystem.h
src/engine/game/ecs/systems/: GameRoundSystem.cpp  GameRoundSystem.h  ShootingSystem.cpp  ShootingSystem.h
src/engine/input/: InputManager.cpp  InputManager.h  InputUtils.h
src/engine/physics/: RaycastUtils.cpp  RaycastUtils.h
src/engine/renderer/: BitmapFont.cpp  BitmapFont.h  Camera.h  Cubemap.cpp  Cubemap.h  GBuffer.cpp  GBuffer.h  Material.cpp  Material.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/engine/renderer/light/: Light.h  LightManager.cpp  LightManager.h
src/engine/system/: AudioManager.cpp  AudioManager.h  BoundsSystem.cpp  CollisionSystem.cpp  CollisionSystem.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DuckSpawnerManager.cpp  DuckSpawnerManager.h  EntityManager.cpp  EntityManager.h  GunSystem.cpp  GunSystem.h  LifecycleSystem.cpp  LifecycleSystem.h  MovementSystem.cpp  MovementSystem.h  RenderingSystem.cpp  TransformSystem.cpp  UIManager.cpp  UIManager.h
src/engine/utils/: InputUtils.h  LoadingScreen.cpp  LoadingScreen.h
